<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rlMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/bg" />

        <Button
            android:id="@+id/btnTopFinish"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_buttonshap"
            android:text="@string/finished"
            android:textColor="@color/colorWhite"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <View
                    android:id="@+id/blank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:id="@+id/rlContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/blank">

                    <TextView
                        android:id="@+id/tvMiles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.000"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/tvMiles"
                        android:layout_toEndOf="@+id/tvMiles"
                        android:gravity="bottom"
                        android:text="@string/mi"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <Chronometer
                        android:id="@+id/chronometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvMiles"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_time"
                        android:drawablePadding="5dp"
                        android:text="@string/_00_00_00"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvMph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chronometer"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_signal"
                        android:drawablePadding="5dp"
                        android:text="@string/_00_00"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvmp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/tvMph"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/tvMph"
                        android:gravity="bottom"
                        android:text="@string/mph"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/twelve_sp" />

                    <Button
                        android:id="@+id/btnFinish"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/chronometer"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_buttonshap"
                        android:text="@string/finished"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

                <View
                    android:id="@+id/lineView"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/rlContent"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorWhite" />

                <RelativeLayout
                    android:id="@+id/rlCurrentStreak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lineView"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/tvCurrentStreak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_fire"
                        android:drawablePadding="10dp"
                        android:text="@string/current_streak_1_day"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvCurrentStreak"
                        android:layout_marginTop="15dp"
                        android:text="@string/_1_workout_total"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlCamera"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_below="@+id/rlCurrentStreak"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_buttonshap">

                    <TextView
                        android:id="@+id/tvCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:drawableTop="@drawable/ic_camera"
                        android:text="@string/take_a_photo"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="100dp"
                        android:layout_below="@+id/tvCamera"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/ic_textshap"
                        android:padding="10dp"
                        android:text="@string/hey_good_looking_why_not_sanp_a_photo_to_share_after_your_workout"
                        android:textSize="20sp" />
                </RelativeLayout>

                <View
                    android:id="@+id/lineView1"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/rlCamera"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorWhite" />

                <ImageView
                    android:id="@+id/ivClick"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_below="@+id/lineView1"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/back"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivClick"
                    android:layout_marginTop="20dp"
                    android:text="@string/aftershok_headphones_don_t_sit_inside_your_ears_n_they_don_t_sit_on_your_ears_n_th"
                    android:textColor="#D8D4D4"
                    android:textSize="20sp" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>