<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/dialog_bg">

        <RelativeLayout
            android:id="@+id/rlFinish"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/dialog_bg_text"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_running"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/finish_workout"
                android:textColor="@color/colorWhite"
                android:textSize="36sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlFinish"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorWhite">

            <RelativeLayout
                android:id="@+id/rlStop"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:text="@string/are_you_sure_want_to_stop_now"
                    android:textColor="#333333"
                    android:textSize="20sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/rlStop">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#9E9797" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btnContinue"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/continue_"
                        android:textColor="#333333" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#9E9797" />

                    <Button
                        android:id="@+id/btnFinish"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/finish"
                        android:textColor="#333333" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</layout>